--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "james-nemecek-service",
-  "version": "0.0.01",
+  "version": "0.0.1",
   "dependencies": {
     "@socket.io/admin-ui": "^0.2.0",
     "cf-deployment-tracker-client": "*",
     "commander": "^2.6.0",
     "cors": "^2.8.5",
-    "express": "^4.14.1",
+    "express": "^4.17.2",
     "http-post": "^0.1.1",
     "http-proxy": "^1.18.1",
     "latest": "^0.2.0",
@@ -21,9 +21,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jamesnem/sit725-2021-t3-prac3.git"
+    "url": "git+https://github.com/jamesnem/sit725-2021-t3-prac3.git"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "description": "Swap-it is a web application that aims to reduce waste by providing a platform that facilites users to offer goods in exchange for other goods or services.\r Login and Registration pages created by James Nemecek \\\r Seller page created by Muhammad \\\r Buyer page created by Bose \\\r User chat created by Julia \\",
+  "bugs": {
+    "url": "https://github.com/jamesnem/sit725-2021-t3-prac3/issues"
+  },
+  "homepage": "https://github.com/jamesnem/sit725-2021-t3-prac3#readme",
+  "author": "",
+  "license": "ISC"
 }
